to-fix(compilation-service): cannot find the class or cannot compile for awful reason